samples/gateway/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: flomesh-lb
spec:
  controllerName: flomesh.io/gateway-controller
